@@ -1,3 +1,5 @@
+* Ensure coherence between planned date of shipments and moves
+
 Version 2.0.0 - 2011-04-27
 * Bug fixes (see mercurial logs for details)
 * Add period to reduce data computation
